# mycelium-os

./: .dockerignore  .env.example  .events.jsonl  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY_BACKLOG.md  config.json  docker-compose.override.yml.example  docker-compose.yml  mycelium.yaml  package.json  pnpm-lock.yaml  skills-lock.json
apps/control-plane/: Dockerfile  alembic.ini  main.py  pyproject.toml
apps/control-plane/alembic/: env.py
apps/control-plane/alembic/versions/: a3fd52c02a40_create_shroom_beads_table.py  b7e1a3d04f12_create_approvals_and_audit_log_tables.py  c8f2e91a1b3d_create_events_table.py  d8e3f92a2c4e_add_trace_fields_to_events.py  e9f4a03b3d5f_create_session_bindings_table.py  f0a5b14c4e6g_create_knowledge_documents_table.py  (+2 more)
apps/control-plane/core/: agno_hooks.py  auth.py  constitution_writer.py  controller.py  database.py  embeddings.py  event_service.py  events.py  manifest.py  models.py  nats_client.py  ollama.py  prompt_safety.py  session_bindings.py  skills.py  storage.py
apps/control-plane/routers/: approvals.py  constitution.py  demo.py  event_log.py  events.py  knowledge.py  org.py  sessions.py  shrooms.py  skills_catalog.py
apps/control-plane/tests/: conftest.py  test_agno_hooks.py  test_api.py  test_approvals.py  test_beads.py  test_constitution.py  test_constitution_writer.py  test_controller.py  test_demo.py  test_event_log.py  test_events.py  test_knowledge.py  test_manifest.py  test_ollama.py  test_org_graph.py  test_query_knowledge_tool.py  test_session_binding.py  test_sessions.py  test_web_browser.py  test_ws_events.py
(+255 files in other folders)
