[project]
name = "mycelium-control-plane"
version = "0.1.0"
description = "Mycelium OS control plane — constitution engine, shroom orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "agno>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "alembic>=1.14",
    "nats-py>=2.9.0",
    "pytest>=9.0.2",
    "a2a-sdk>=0.3.25",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "routers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
